@@ -1,3 +1,8 @@
+2009-06-28  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/bindings-second-mode.lisp (set-default-second-keys): Bind
+	"o" on set-open-in-new-frame-in-parent-frame-nw-hook.
+
 2009-06-27  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* contrib/keyb_fr.lisp: New file to handle an azerty keyboard.
